# MyStockExchangeBoostQTServerClientConsoleApp

./: .gitignore  LICENSE  README.md
Algorithm/: Algorithm.pro  Tests.cpp  main.cpp
MyClient/: CMakeLists.txt  CMakeLists.txt.user.c4ebeb8  CMakeLists.txt.user.e8c148c  Client.cpp  Common.hpp
MyServer/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.c4ebeb8  CMakeLists.txt.user.e8c148c  Server.cpp  Server.h  main.cpp
MyclientAppCmake/: CMakeLists.txt  Common.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
